# SynthwaveCompute

./: .gitmodules  CMakeLists.txt  README.MD
Synthwave/: CMakeLists.txt
Synthwave/Assets/: Fullscreen.slang  Synthwave.slang
Synthwave/Source/: SynthwaveApplication.cpp  SynthwaveApplication.h
